--- a/frontend/studente/src/assets/i18n/en.json
+++ b/frontend/studente/src/assets/i18n/en.json
@@ -1,9 +1,11 @@
 {
-  "app_name":"myCARTELLA",
+  "app_name": "myCARTELLA",
   "home_experiences_label": "Le mie esperienze",
-  "home_exams_label":"Esami",
+  "home_exams_label": "Esami",
   "home_training_label": "Percorso formativo",
   "home_stage_label": "Alternanza scuola-lavoro",
+  "home_job_label": "Esperienza lavorativa",
+  "home_mobility_label": "Mobilità",
   "home_activity_label": "Attività",
   "home_events_label": "Eventi",
   "home_cv_label": "Curriculum Vitae",
@@ -11,10 +13,17 @@
   "stage_order_label": "Ordina",
   "stage_filter_placeholder": "Cerca per nome",
   "stage_add_new_button": "Aggiungi nuovo stage",
+  "job_order_label": "Ordina",
+  "job_filter_placeholder": "Cerca per nome",
+  "job_add_new_button": "Aggiungi nuovo stage",
+  "mobility_order_label": "Ordina",
+  "mobility_filter_placeholder": "Cerca per nome",
+  "mobility_add_new_button": "Aggiungi nuova mobilità",
   "addStage_title_label": "Titolo:",
-  "addStage_period_label":"Periodo: ",
+  "addStage_period_label": "Periodo: ",
   "addStage_dateFrom_label": "Dal:",
   "addStage_dateTo_label": "Al:",
+    "addStage_duration_label": "Durata (ore): ",
   "addStage_company_label": "Azienda:",
   "addStage_address_label": "Indirizzo azienda:",
   "addStage_tutor_label": "Tutor aziendale:",
@@ -22,81 +31,129 @@
   "addStage_certificate_label": "Certificato:",
   "addStage_title_placeholder": "Aggiungi il titolo dello stage",
   "addStage_date_from_placeholder": "Seleziona la data di inizio dello stage",
+  "addStage_duration_placeholder": "Seleziona la durata",
   "addStage_date_to_placeholder": "Seleziona la data di fine dello stage",
   "addStage_company_placeholder": "Seleziona l'azienda dello stage",
   "addStage_address_placeholder": "Seleziona l'indirizzo dello stage",
   "addStage_tutor_placeholder": "Seleziona il tutor dello stage",
   "addStage_description_placeholder": "Aggiungi una descrizione dello stage",
+  "addJob_title_label": "Titolo:",
+  "addJob_period_label": "Periodo: ",
+  "addJob_dateFrom_label": "Dal:",
+  "addJob_dateTo_label": "Al:",
+  "addJob_company_label": "Azienda:",
+  "addJob_address_label": "Indirizzo azienda:",
+  "addJob_tutor_label": "Tutor aziendale:",
+  "addJob_description_label": "Descrizione:",
+  "addJob_certificate_label": "Certificato:",
+  "addJob_title_placeholder": "Aggiungi il titolo dell'esperienza lavorativa",
+  "addJob_date_from_placeholder": "Seleziona la data di inizio dell'esperienza lavorativa",
+  "addJob_date_to_placeholder": "Seleziona la data di fine dell'esperienza lavorativa",
+  "addJob_company_placeholder": "Seleziona l'azienda dell'esperienza lavorativa",
+  "addJob_address_placeholder": "Seleziona l'indirizzo dell'esperienza lavorativa",
+  "addJob_tutor_placeholder": "Seleziona il tutor dell'esperienza lavorativae",
+  "addJob_description_placeholder": "Aggiungi una descrizione dell'esperienza lavorativa",
+  "addMobility_title_label": "Titolo:",
+  "addMobility_dateFrom_label": "Dal:",
+  "addMobility_dateTo_label": "Al:",
+  "addMobility_location_label": "Luogo:",
+  "addMobility_language_label": "Lingua:",
+  "addMobility_description_label": "Descrizione:",
+  "addMobility_title_placeholder": "Aggiungi il titolo dello",
+  "addMobility_date_from_placeholder": "Seleziona la data di inizio della mobilità",
+  "addMobility_date_to_placeholder": "Seleziona la data di fine della mobilità",
+  "addMobility_location_placeholder": "Inserisci il luogo della mobilità",
+  "addMobility_language_placeholder": "Inserisci la lingua della mobilità",
+  "addMobility_description_placeholder": "Aggiungi una descrizione della mobilità",
   "title_stage": "Alternanza scuola lavoro",
+  "title_job": "Esperienza lavorativa",
   "title_home": "Benvenuto",
   "title_exam": "Dettagli esame",
+  "title_mobility": "Mobilità",
   "title_add_stage": "Nuovo Stage",
+  "title_add_job": "Nuova Esperienza Lavorativa",
+  "title_add_mobility": "Nuova Mobilità",
   "title_add_activity": "Nuova Attività",
   "title_login": "",
-  "login_subtitle":"Accedi come",
+  "login_subtitle": "Accedi come",
   "title_institute": "Dettagli istituto",
   "title_events": "Eventi",
   "title_curriculum": "Curriculum Vitae",
   "title_certifications": "Certificazioni",
   "title_activities": "Attività",
-  "title_profile":"La mia scheda",
-  "title_notifiche":"Notifiche",
-  "delete_button":"Cancella",
-  "update_button":"Modifica",
-  "alert_delete_stage_title":"Cancella esperienza",
-  "alert_delete_stage_message":"Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
-  "alert_delete_event_title":"Cancella evento",
-  "alert_delete_event_message":"Sei sicuro di voler cancellare l'evento ?",
-    "alert_delete_activity_title":"Cancella attività",
-  "alert_delete_activity_message":"Sei sicuro di voler cancellare l'attività?",
-  "alert_confirm":"Conferma",
-  "alert_cancel":"Cancella",
-  "loading":"Loading...",
-  "bar-link-label":"Servizi",
-  "profile_anagrafica_label":"ANAGRAFICA",
-  "profile_contacts_label":"CONTATTI",
-  "profile_name_label":"Nome: ",
-  "profile_tel_label":"Telefono: ",
-  "profile_surname_label":"Cognome: ",
-  "profile_cel_label":"Cellulare: ",
-  "profile_cf_label":"Cod. Fisc: ",
-  "profile_mail_label":"Email: ",
-  "profile_birthday_label":"Data di nascita: ",
-  "profile_update_button":"Modifica",
-  "profile_cancel_button":"Annulla",
-  "profile_confirm_button":"Salva",
-  "profile_tel_input_placeholder":"Inserire un numero di telefono",
-  "profile_cel_input_placeholder":"Inserire un numero di cellulare",
-  "profile_mail_input_placeholder":"Inserire una mail",
-  "alert_delete_certification_title":"Conferma",
-  "alert_delete_certification_message":"Sei sicuro di voler annulare le modifiche?",
-  "registration_course_label":"Corso: ",
-  "registration_year_label":"Anno: ",
-  "registration_class_label":"Classe: ",
-  "registration_teachingUnit_label":"Unita` didattica: ",
-  "order_label":"Ordinamento",
-  "institutional_label":"Istituzionale",
-  "not_institutional_label":"Non istituzionale",
-  "exam_title_label":"Titolo di studio: ",
-  "exam_address_label":"Indirizzo: ",
-  "exam_result_label":"Esito: ",
-  "exam_year_label":"Anno: ",
-  "certification_add_new_button":"Aggiungi certificazione",
-  "certification_description_label":"Descrizione: ",
-  "certification_type_label":"Tipo: ",
-  "certification_duration_label":"Durata: ",
-  "certification_location_label":"Locazione: ",
-  "stage_title_label":"Titolo stage: ",
-  "stage_dateFrom_label":"Dal: ",
-  "stage_dateTo_label":"Al: ",
-  "stage_location_label":"Locazione: ",
-  "stage_description_label":"Descrizione: ",
-  "activity_add_new_button":"Aggiungi attività",
-  "activity_title_label":"Titolo attività: ",
-  "activity_dateFrom_label":"Dal: ",
-  "activity_dateTo_label":"Al: ",
-  "activity_location_label":"Locazione: ",
-  "activity_description_label":"Descrizione: ",
+  "title_profile": "La mia scheda",
+  "title_notifiche": "Notifiche",
+  "delete_button": "Cancella",
+  "update_button": "Modifica",
+  "alert_delete_stage_title": "Cancella esperienza",
+  "alert_delete_stage_message": "Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
+  "alert_delete_job_title": "Cancella esperienza",
+  "alert_delete_job_message": "Sei sicuro di voler cancellare l'esperienza lavorativa?",
+  "alert_delete_event_title": "Cancella evento",
+  "alert_delete_event_message": "Sei sicuro di voler cancellare l'evento ?",
+  "alert_delete_activity_title": "Cancella attività",
+  "alert_delete_activity_message": "Sei sicuro di voler cancellare l'attività?",
+  "alert_confirm": "Conferma",
+  "alert_cancel": "Cancella",
+  "loading": "Loading...",
+  "bar-link-label": "Servizi",
+  "profile_anagrafica_label": "ANAGRAFICA",
+  "profile_contacts_label": "CONTATTI",
+  "profile_name_label": "Nome: ",
+  "profile_tel_label": "Telefono: ",
+  "profile_surname_label": "Cognome: ",
+  "profile_cel_label": "Cellulare: ",
+  "profile_cf_label": "Cod. Fisc: ",
+  "profile_mail_label": "Email: ",
+  "profile_birthday_label": "Data di nascita: ",
+  "profile_update_button": "Modifica",
+  "profile_cancel_button": "Annulla",
+  "profile_confirm_button": "Salva",
+  "profile_tel_input_placeholder": "Inserire un numero di telefono",
+  "profile_cel_input_placeholder": "Inserire un numero di cellulare",
+  "profile_mail_input_placeholder": "Inserire una mail",
+  "alert_delete_certification_title": "Conferma",
+  "alert_delete_certification_message": "Sei sicuro di voler annulare le modifiche?",
+  "registration_course_label": "Corso: ",
+  "registration_year_label": "Anno: ",
+  "registration_class_label": "Classe: ",
+  "registration_teachingUnit_label": "Unita` didattica: ",
+  "order_label": "Ordinamento",
+  "institutional_label": "Istituzionale",
+  "not_institutional_label": "Non istituzionale",
+  "exam_title_label": "Titolo di studio: ",
+  "exam_type_label": "Tipo: ",
+  "exam_grade_label": "Voto: ",
+  "exam_address_label": "Indirizzo: ",
+  "exam_result_label": "Esito: ",
+  "exam_year_label": "Anno: ",
+  "certification_add_new_button": "Aggiungi certificazione",
+  "certification_description_label": "Descrizione: ",
+  "certification_type_label": "Tipo: ",
+  "certification_duration_label": "Durata: ",
+  "certification_location_label": "Locazione: ",
+  "stage_title_label": "Titolo stage: ",
+  "stage_dateFrom_label": "Dal: ",
+  "stage_dateTo_label": "Al: ",
+  "stage_location_label": "Locazione: ",
+  "stage_description_label": "Description: ",
+  "job_title_label": "Titolo esperienza: ",
+  "job_dateFrom_label": "Dal: ",
+  "job_dateTo_label": "Al: ",
+  "job_location_label": "Locazione: ",
+  "job_description_label": "Description: ",
+  "mobility_title_label": "Titolo stage: ",
+  "mobility_dateFrom_label": "Dal: ",
+  "mobility_dateTo_label": "Al: ",
+  "mobility_location_label": "Locazione: ",
+  "mobility_language_label": "Lingua: ",
+  "mobility_description_label": "Descrizione: ",
+  "activity_add_new_button": "Aggiungi attività",
+  "activity_title_label": "Titolo attività: ",
+  "activity_dateFrom_label": "Dal: ",
+  "activity_dateTo_label": "Al: ",
+  "activity_location_label": "Locazione: ",
+  "activity_description_label": "Descrizione: ",
   "addActivity_title_label": "Titolo attività:",
   "addActivity_dateFrom_label": "Dal:",
   "addActivity_dateTo_label": "Al:",
@@ -110,13 +167,13 @@
   "addActivity_address_placeholder": "Seleziona l'indirizzo",
   "addActivity_tutor_placeholder": "Seleziona il tutor ",
   "addActivity_description_placeholder": "Aggiungi una descrizione ",
-    "event_add_new_button":"Aggiungi evento",
-   "event_title_label":"Titolo evento: ",
-  "event_dateFrom_label":"Dal: ",
-  "event_dateTo_label":"Al: ",
-  "event_location_label":"Locazione: ",
-  "event_description_label":"Descrizione: ",
-  "title_add_event":"Aggiungi nuovo evento",
+  "event_add_new_button": "Aggiungi evento",
+  "event_title_label": "Titolo evento: ",
+  "event_dateFrom_label": "Dal: ",
+  "event_dateTo_label": "Al: ",
+  "event_location_label": "Locazione: ",
+  "event_description_label": "Descrizione: ",
+  "title_add_event": "Aggiungi nuovo evento",
   "addEvent_title_label": "Titolo evento:",
   "addEvent_dateFrom_label": "Dal:",
   "addEvent_dateTo_label": "Al:",
@@ -130,12 +187,13 @@
   "addEvent_address_placeholder": "Seleziona l'indirizzo",
   "addEvent_tutor_placeholder": "Seleziona il tutor ",
   "addEvent_description_placeholder": "Aggiungi una descrizione ",
-    "title_add_certificate":"Aggiungi nuovo certificato",
+  "title_add_certificate": "Aggiungi nuovo certificato",
   "addCertificate_title_label": "Titolo certificato:",
   "addCertificate_dateFrom_label": "Dal:",
   "addCertificate_dateTo_label": "Al:",
   "addCertificate_address_label": "Indirizzo:",
   "addCertificate_tutor_label": "Tutor:",
+  "addCertificate_certifier_label": "Istituto certificante:",
   "addCertificate_description_label": "Descrizione:",
   "addCertificate_title_placeholder": "Aggiungi il titolo",
   "addCertificate_date_from_placeholder": "Seleziona la data di inizio ",
@@ -143,43 +201,65 @@
   "addCertificate_company_placeholder": "Seleziona l'azienda",
   "addCertificate_address_placeholder": "Seleziona l'indirizzo",
   "addCertificate_tutor_placeholder": "Seleziona il tutor ",
+  "addCertificate_certifier_placeholder": "Inserisci il nome dell'istituto certificante",
   "addCertificate_description_placeholder": "Aggiungi una descrizione ",
-  "addCertificate_present_certificate_label":"Certificato attuale",
-  "addCertificate_load_certificate_label":"Carica certificato",
-  "addCertificate_remove_certificate_label":"Rimuovi certificato",
-  "addCertificate_remove_actual_certificate_label":"Rimuovi certificato ",
-  "certificate_title_label":"Titolo: ",
-  "certificate_dateFrom_label":"Da: ",
-  "certificate_dateTo_label":"A: ",
-  "certificate_location_label":"Locazione: ",
-  "certificate_description_label":"Descrizione: ",
-  "certificate_certificate_label":"Certificato",
-  "save_button_label":"Salva",
-  "cancel_button_label":"Annulla",
-  "events_empty_list_label":"Non sono presenti eventi",
-  "stages_empty_list_label":"Non sono presenti alternanza scuola-lavoro",
-  "activities_empty_list_label":"Non sono presenti attività",
-  "certifications_empty_list_label":"Non sono presenti certificati",
-  "notifications_empty_list_label":"Non sono presenti notifiche",
+  "addCertificate_present_certificate_label": "Certificato attuale",
+  "addCertificate_load_certificate_label": "Carica certificato",
+  "addCertificate_remove_certificate_label": "Rimuovi certificato",
+  "addCertificate_remove_actual_certificate_label": "Rimuovi certificato ",
+  "certificate_title_label": "Titolo: ",
+  "certificate_dateFrom_label": "Da: ",
+  "certificate_dateTo_label": "A: ",
+  "certificate_location_label": "Locazione: ",
+  "certificate_description_label": "Descrizione: ",
+  "certificate_certifier_label": "Istituto certificante: ",
+  "certificate_certificate_label": "Certificato",
+  "save_button_label": "Salva",
+  "cancel_button_label": "Annulla",
+  "events_empty_list_label": "Non sono presenti eventi",
+  "stages_empty_list_label": "Non sono presenti esperienze di alternanza scuola-lavoro",
+  "jobs_empty_list_label": "Non sono presenti esperienze lavorative",
+  "activities_empty_list_label": "Non sono presenti attività",
+  "certifications_empty_list_label": "Non sono presenti certificati",
+  "notifications_empty_list_label": "Non sono presenti notifiche",
   "consent_title": "Richiesta autorizzazione",
   "consent_text": "Lorem ipsum ....",
   "consent_accept": "Autorizzo",
   "consent_reject": "Non autorizzo",
-  "toast_delete_stage":"Lo stage e` stato cancellato",
-"toast_delete_activity":"L'attività e` stata cancellata",
-"toast_delete_certification":"La certificazione e` stata cancellata",
-  "toast_add_stage":"Lo stage e` stato aggiunto correttamente",
-"toast_add_activity":"L'attività e` stata aggiunta correttamente",
-"toast_add_certification":"La certificazione e` stata aggiunta correttamente",
-"subjects_registrations_label": "Materie: ",
-"subjects_registrations_title_label":"Titolo",
-"subjects_registrations_teacher_label":"Insegnante",
-"subjects_no_registrations_label":"Non sono presenti materie registrate",
-"profile_remove_picture_label":"Rimuovi immagine",
-"alert_map_location_title":"Indirizzo selezionato",
-"alert_map_location_message":"L'indirizzo e` {{value}}",
-"field_missing_label":"Campo obbligatorio",
-"addCertificate_title_missing_label":"Titolo del Certificato mancante",
-"addCertificate_description_missing_label":"Descrizione del certificato mancante",
-"toast_error_fields_missing":"Campi obbligatori non inseriti"
+  "toast_delete_stage": "Lo stage e` stato cancellato",
+  "toast_delete_job": "L'esperienza e` stata cancellata",
+  "toast_delete_mobility": "La mobilità e` stato cancellata",
+  "toast_delete_activity": "L'attività e` stata cancellata",
+  "toast_delete_certification": "La certificazione e` stata cancellata",
+  "toast_add_stage": "Lo stage e` stato aggiunto correttamente",
+  "toast_add_job": "L'esperienza e` stata aggiunta correttamente",
+  "toast_add_mobility": "La mobilità e` stato aggiunto correttamente",
+  "toast_add_activity": "L'attività e` stata aggiunta correttamente",
+  "toast_add_certification": "La certificazione e` stata aggiunta correttamente",
+  "subjects_registrations_label": "Materie: ",
+  "subjects_registrations_title_label": "Titolo",
+  "subjects_registrations_teacher_label": "Insegnante",
+  "subjects_no_registrations_label": "Non sono presenti materie registrate",
+  "profile_remove_picture_label": "Rimuovi immagine",
+  "alert_map_location_title": "Indirizzo selezionato",
+  "alert_map_location_message": "L'indirizzo e` {{value}}",
+  "field_missing_label": "Campo obbligatorio",
+  "addCertificate_title_missing_label": "Titolo del Certificato mancante",
+  "addCertificate_description_missing_label": "Descrizione del certificato mancante",
+  "toast_error_fields_missing": "Campi obbligatori non inseriti",
+  "addCertificate_error_date": "Data non corretta",
+  "add_certificate_button": "Aggiungi certificato",
+  "addCertificate_save_certificate_label": "Salva",
+  "modify_certificate_button": "Modifica certificato",
+  "alert_remove_certificate_mobility_title": "Rimozione certificato",
+  "alert_remove_certificate_mobility_message": "Sei sicuro di voler rimuovere il certificato?",
+  "alert_delete_mobility_title": "Cancella mobilità",
+  "alert_delete_mobility_message": "Sei sicuro di voler cancellare la mobilità?",
+  "toast_delete_certificate": "Il certificato e` stato cancellato",
+  "cert_type_lang": "Lingua",
+  "cert_type_other": "Altro",
+  "addCertificate_lang_placeholder": "Inserisci la lingua",
+  "addCertificate_level_placeholder": "Inserisci il livello",
+  "stage_contact_label":"Contatto: ",
+  "stage_duration_label":"Durata (ore): "
 }
