--- a/frontend/studente/www/assets/i18n/it.json
+++ b/frontend/studente/www/assets/i18n/it.json
@@ -4,6 +4,7 @@
   "home_exams_label": "Esami",
   "home_training_label": "Percorso formativo",
   "home_stage_label": "Alternanza scuola-lavoro",
+  "home_job_label": "Esperienza lavorativa",
   "home_mobility_label": "Mobilità",
   "home_activity_label": "Attività",
   "home_events_label": "Eventi",
@@ -12,6 +13,9 @@
   "stage_order_label": "Ordina",
   "stage_filter_placeholder": "Cerca per nome",
   "stage_add_new_button": "Aggiungi nuovo stage",
+    "job_order_label": "Ordina",
+  "job_filter_placeholder": "Cerca per nome",
+  "job_add_new_button": "Aggiungi nuova esperienza",
   "mobility_order_label":"Ordina",
     "mobility_filter_placeholder": "Cerca per nome",
   "mobility_add_new_button": "Aggiungi nuova mobilità",
@@ -19,6 +23,7 @@
   "addStage_period_label": "Periodo: ",
   "addStage_dateFrom_label": "Dal:",
   "addStage_dateTo_label": "Al:",
+  "addStage_duration_label": "Durata (ore): ",
   "addStage_company_label": "Azienda:",
   "addStage_address_label": "Indirizzo azienda:",
   "addStage_tutor_label": "Tutor aziendale:",
@@ -26,11 +31,28 @@
   "addStage_certificate_label": "Certificato:",
   "addStage_title_placeholder": "Aggiungi il titolo dello stage",
   "addStage_date_from_placeholder": "Seleziona la data di inizio dello stage",
+    "addStage_duration_placeholder": "Seleziona la durata",
   "addStage_date_to_placeholder": "Seleziona la data di fine dello stage",
   "addStage_company_placeholder": "Seleziona l'azienda dello stage",
   "addStage_address_placeholder": "Seleziona l'indirizzo dello stage",
   "addStage_tutor_placeholder": "Seleziona il tutor dello stage",
   "addStage_description_placeholder": "Aggiungi una descrizione dello stage",
+  "addJob_title_label": "Titolo:",
+  "addJob_period_label": "Periodo: ",
+  "addJob_dateFrom_label": "Dal:",
+  "addJob_dateTo_label": "Al:",
+  "addJob_company_label": "Azienda:",
+  "addJob_address_label": "Indirizzo azienda:",
+  "addJob_tutor_label": "Tutor aziendale:",
+  "addJob_description_label": "Descrizione:",
+  "addJob_certificate_label": "Certificato:",
+  "addJob_title_placeholder": "Aggiungi il titolo dell'esperienza lavorativa",
+  "addJob_date_from_placeholder": "Seleziona la data di inizio dell'esperienza lavorativa",
+  "addJob_date_to_placeholder": "Seleziona la data di fine dell'esperienza lavorativa",
+  "addJob_company_placeholder": "Seleziona l'azienda dell'esperienza lavorativa",
+  "addJob_address_placeholder": "Seleziona l'indirizzo dell'esperienza lavorativa",
+  "addJob_tutor_placeholder": "Seleziona il tutor dell'esperienza lavorativae",
+  "addJob_description_placeholder": "Aggiungi una descrizione dell'esperienza lavorativa",
     "addMobility_title_label": "Titolo:",
   "addMobility_dateFrom_label": "Dal:",
   "addMobility_dateTo_label": "Al:",
@@ -44,10 +66,12 @@
   "addMobility_language_placeholder": "Inserisci la lingua della mobilità",
   "addMobility_description_placeholder": "Aggiungi una descrizione della mobilità",
   "title_stage": "Alternanza scuola lavoro",
+  "title_job": "Esperienza lavorativa",
   "title_home": "Benvenuto",
   "title_exam": "Dettagli esame",
   "title_mobility": "Mobilità",
   "title_add_stage": "Nuovo Stage",
+  "title_add_job": "Nuova Esperienza Lavorativa",
   "title_add_mobility": "Nuova Mobilità",
   "title_add_activity": "Nuova Attività",
   "title_login": "",
@@ -63,6 +87,8 @@
   "update_button": "Modifica",
   "alert_delete_stage_title": "Cancella esperienza",
   "alert_delete_stage_message": "Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
+  "alert_delete_job_title": "Cancella esperienza",
+  "alert_delete_job_message": "Sei sicuro di voler cancellare l'esperienza lavorativa?",
   "alert_delete_event_title": "Cancella evento",
   "alert_delete_event_message": "Sei sicuro di voler cancellare l'evento ?",
   "alert_delete_activity_title": "Cancella attività",
@@ -111,6 +137,11 @@
   "stage_dateTo_label": "Al: ",
   "stage_location_label": "Locazione: ",
   "stage_description_label":"Description: ",
+  "job_title_label": "Titolo esperienza: ",
+  "job_dateFrom_label": "Dal: ",
+  "job_dateTo_label": "Al: ",
+  "job_location_label": "Locazione: ",
+  "job_description_label":"Description: ",
   "mobility_title_label": "Titolo stage: ",
   "mobility_dateFrom_label": "Dal: ",
   "mobility_dateTo_label": "Al: ",
@@ -182,11 +213,14 @@
   "certificate_location_label": "Locazione: ",
   "certificate_description_label": "Descrizione: ",
   "certificate_certifier_label": "Istituto certificante: ",
+  "certificate_lang_label": "Lingua: ",
+  "certificate_level_label": "Livello: ",
   "certificate_certificate_label": "Certificato",
   "save_button_label": "Salva",
   "cancel_button_label": "Annulla",
   "events_empty_list_label": "Non sono presenti eventi",
-  "stages_empty_list_label": "Non sono presenti alternanza scuola-lavoro",
+  "stages_empty_list_label": "Non sono presenti esperienze di alternanza scuola-lavoro",
+  "jobs_empty_list_label": "Non sono presenti esperienze lavorative",
   "activities_empty_list_label": "Non sono presenti attività",
   "certifications_empty_list_label": "Non sono presenti certificati",
   "notifications_empty_list_label": "Non sono presenti notifiche",
@@ -195,10 +229,12 @@
   "consent_accept": "Autorizzo",
   "consent_reject": "Non autorizzo",
   "toast_delete_stage": "Lo stage e` stato cancellato",
+  "toast_delete_job": "L'esperienza e` stata cancellata",
   "toast_delete_mobility": "La mobilità e` stato cancellata",
   "toast_delete_activity": "L'attività e` stata cancellata",
   "toast_delete_certification": "La certificazione e` stata cancellata",
   "toast_add_stage": "Lo stage e` stato aggiunto correttamente",
+  "toast_add_job": "L'esperienza e` stata aggiunta correttamente",
   "toast_add_mobility": "La mobilità e` stato aggiunto correttamente",
   "toast_add_activity": "L'attività e` stata aggiunta correttamente",
   "toast_add_certification": "La certificazione e` stata aggiunta correttamente",
@@ -221,5 +257,11 @@
   "alert_remove_certificate_mobility_message":"Sei sicuro di voler rimuovere il certificato?",
   "alert_delete_mobility_title":"Cancella mobilità",
   "alert_delete_mobility_message":"Sei sicuro di voler cancellare la mobilità?",
-  "toast_delete_certificate":"Il certificato e` stato cancellato"
+  "toast_delete_certificate":"Il certificato e` stato cancellato",
+  "cert_type_lang":"Lingua",
+  "cert_type_other":"Altro",
+  "addCertificate_lang_placeholder":"Inserisci la lingua",
+  "addCertificate_level_placeholder":"Inserisci il livello",
+  "stage_contact_label":"Contatto: ",
+  "stage_duration_label":"Durata (ore): "
 }
